<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_vertical"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linerVerticalMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:fontFamily="@font/archivo_black"
            android:gravity="center"
            android:text="@string/caja"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editNombreProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="15"
            android:gravity="center_horizontal"
            android:hint="@string/ingrese_nombre_de_producto"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/editPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="15"
            android:gravity="center_horizontal"
            android:hint="@string/ingrese_precio_producto"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/editarCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="15"
            android:gravity="center_horizontal"
            android:hint="@string/ingrese_cantidad_de_producto"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <LinearLayout
            android:id="@+id/linerIva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10sp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textIva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="50sp"
                android:fontFamily="@font/archivo_black"
                android:gravity="center_horizontal"
                android:text="@string/iva_19"
                android:textColor="#040404" />

            <TextView
                android:id="@+id/totalIva"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linerTotalPagar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="10sp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textTotalResultado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="50sp"
                android:fontFamily="@font/archivo_black"
                android:gravity="center_horizontal"
                android:text="@string/total_a_pagar"
                android:textColor="#040404" />

            <TextView
                android:id="@+id/totalResultado"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonCalcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:text="@string/calcular"
            android:textColor="#040404" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>